# cc-bridge

./: .biomeignore  .claude.json  .env.example  .gitignore  .ruff.toml  CHANGELOG.md  Dockerfile  FIXES_SUMMARY.md  Makefile  README.md  WEBHOOK_IMPLEMENTATION.md  biome.json  bunfig.toml  docker-compose.yml  package.json  pyproject.toml  pytest.ini  test_setup_fixes.py  tsconfig.json
.claude/: CLAUDE.md  settings.local.json
cc_bridge/: __init__.py  cli.py  config.py  constants.py  exceptions.py  logging.py
cc_bridge/agents/: container_agent.py  container_agent.ts
cc_bridge/commands/: __init__.py  bot.py  claude.py  config.py  cron.py  docker_cmd.py  health.py  hook_stop.py  logs.py  server.py  setup.py  tunnel.py  webhook.py
cc_bridge/core/: __init__.py  claude.py  docker_compat.py  docker_discovery.py  docker_errors.py  health_monitor.py  instance_detector.py  instance_interface.py  instance_lifecycle.py  instance_operations.py  instances.py  log_streamer.py  named_pipe.py  parser.py  session_tracker.py  telegram.py  tmux.py  transcript.py  tunnel.py  validation.py
cc_bridge/models/: __init__.py  config.py  instances.py  telegram.py
contrib/: cc-bridge.rb  com.cc-bridge.daemon.plist  com.cloudflare.cloudflared.plist  homebrew.mxcl.cc-bridge.plist  homebrew.mxcl.cloudflared.plist
data/config/: agent.jsonc  discovery-cache.jsonc  gateway.jsonc  gateway.jsonc.template
dockers/: .dockerignore  Dockerfile  docker-compose.yml
dockers/.claude/: CLAUDE.md  settings.json
docs/: 01_ARCHITECTURE_SPEC.md  05_USER_MANUAL.md  06_EMBEDDED_AGENT_SPEC.md  ARCHITECTURE_SPEC.md  ARCHITECTURE_SPEC_RFC.md  DEVELOPER_SPEC.md  DOCKER_INTEGRATION.md  NEWSNOW_EXTRACTION_SUMMARY.md  USER_MANUAL.md  docker-setup.md  feishu-setup.md  fifo-mode.md  how_to_setup_cloudflared_with_brew_services.md  launch-agent-vs-daemon.md  migration-guide.md  service-management.md  tool-sandboxing-analysis.md  troubleshooting.md
docs/.tasks/: config.jsonc  kanban_prompts.md  kanban_tasks.md
docs/examples/: exec-mode-config.yaml  fifo-mode-config.yaml
docs/legacy/: 0012_IMPLEMENTATION_SUMMARY.md  0018_SUMMARY.md  task_0014_summary.md  task_0016_completion.md
docs/plans/: 0003_core_modules_implementation.md  0196_rag_pipeline_implementation.md
docs/prompts/: .kanban.md  0001_brainstorm_cc-bridge.md  0002_Project_scaffolding.md  0003_Core_modules:_config,_logging,_CLI.md  0004_Core_business_logic:_telegram,_tmux,_parser.md  0005_MVP_commands:_server_command.md  0006_MVP_commands:_hook-stop_command.md  0007_MVP_commands:_health_command.md  0008_MVP_commands:_setup_command.md  0009_MVP_commands:_config_command.md  0010_MVP_commands:_tunnel_command.md  0011_Extended_commands:_webhook_command.md  0012_Extended_commands:_logs_command.md  0013_Extended_commands:_bot_command.md  0014_Robustness:_error_handling_improvements.md  0015_Robustness:_session_persistence.md  0015_Robustness__session_persistence.md  0016_Robustness:_rate_limiting.md  0017_Robustness:_comprehensive_logging.md  0018_Advanced:_message_queuing.md  0019_Advanced:_Docker_deployment.md  0020_Advanced:_multi-user_support.md  0020_Advanced__multi-user_support.md  0021_Advanced:_metrics_and_observability.md  0024_develop_cc-bridge_server_as_a_brew_service.md  0025_add_docker_support.md  0026_add_docker_python_sdk_dependency.md  0027_extend_claudeinstance_model_for_docker_support.md  0028_create_docker_configuration_section.md  0029_implement_docker_container_discovery.md  0030_create_abstract_instanceinterface.md  0031_implement_named_pipe_communication_channel.md  0032_implement_container_agent_script.md  0033_implement_dockercontainer_class.md  0034_update_instancemanager_for_docker_instances.md  0035_update_serverpy_to_use_polymorphic_instances.md  0036_add_docker_instance_cli_commands.md  0037_integrate_with_existing_claude_command.md  0038_add_instance_type_detection.md  0039_implement_error_handling_for_docker.md  (+100 more)
docs/reference/: DOCKER.md  DOCKER_IMPLEMENTATION.md  HOOK_STOP.md  LOGS_COMMAND.md  logs_quick_reference.md  rate_limiting.md  rate_limiting_quick_reference.md  rate_limiting_verification.md
docs/tasks/: 0162_convert_in-process_execution_engine_as_a_full_featured_agent.md  0163_Skills_system:_SKILL.md_loading_and_injection_into_workspace.md  0164_Tool_policy_pipeline:_multi-stage_filtering.md  0165_Context_compaction_with_LLM_summarization.md  0166_add_session_manager_to_agent.md  0167_enhance_tool_system.md  0168_Implement_tool_sandboxing_system_for_cc-bridge.md  0169_Implement_tool_sandboxing_system_for_cc-bridge.md  0170_Define_SandboxConfig_types_and_Docker_configuration_interface.md  0171_Implement_security_validation_for_sandbox_configurations.md  0172_Implement_per-tool_sandbox_policy_engine.md  0173_Implement_resource_limits_support_for_sandboxed_tools.md  0179_enhance_memory_system.md  (+24 more)
scripts/: container_cmd.sh  delete_task.ts  fix-cloudflared-plist.sh  health-check.sh  host_cmd.sh  host_cmd.ts  host_exec.sh  install-daemon.sh  install-hooks.sh  install-service.sh  list_miniapp_tasks.ts  list_tasks.ts  refresh-discovery-cache.sh  refresh-discovery-cache.ts  resolve-llm-provider.sh  run-integration-tests.sh  schedule_miniapp.ts  setup-daily-news.sh  stop-hook.sh  sync-plugins.sh  talk-to-agent.ts  test_pipes.py  uninstall-daemon.sh  uninstall-service.sh  unschedule_miniapp.ts
src/: test-setup.ts
tests/: __init__.py  conftest.py  test_cli.py  test_config.py  test_logging.py
(+273 files in other folders)
