[project]
name = "cc-bridge"
version = "0.1.0"
description = "Telegram bot bridge for Claude Code with FastAPI and Typer"
readme = "README.md"
requires-python = ">=3.10"
license = { text = "MIT" }
authors = [
    { name = "Robin Min", email = "robin@example.com" }
]
keywords = ["telegram", "claude", "bridge", "bot", "fastapi"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Software Development :: Libraries :: Python Modules",
]
dependencies = [
    # Docker SDK - pinned to 7.x for API stability
    "docker>=7.0.0,<8.0.0",

    # FastAPI - allow 0.115.x for bug fixes, prevent 0.116+ breaking changes
    "fastapi>=0.115.0,<0.116.0",

    # Typer - allow 0.12.x for bug fixes, prevent 0.13+ breaking changes
    "typer>=0.12.0,<0.13.0",

    # Click - pin to 8.1.x for compatibility with Typer 0.12.x
    # Click 8.2+ changed make_metavar() signature causing incompatibility
    "click>=8.1.0,<8.2.0",

    # httpx - allow 0.27.x for bug fixes, prevent breaking changes
    "httpx>=0.27.0,<0.28.0",

    # Pydantic V2 - allow 2.x for bug fixes, prevent 3.0 breaking changes
    "pydantic>=2.0.0,<3.0.0",

    # structlog - allow 24.x for bug fixes, prevent 25.0 breaking changes
    "structlog>=24.0.0,<25.0.0",

    # toml - minimal library, allow 0.10.x for bug fixes
    "toml>=0.10.0,<0.11.0",

    # uvicorn - allow 0.30.x for bug fixes, prevent breaking changes
    "uvicorn>=0.30.0,<0.31.0",
]

[project.optional-dependencies]
# Development dependencies with version constraints
dev = [
    # pytest - allow 8.x for bug fixes, prevent 9.0 breaking changes
    "pytest>=8.0.0,<9.0.0",

    # pytest-cov - allow 5.x for bug fixes, prevent breaking changes
    "pytest-cov>=5.0.0,<6.0.0",

    # pytest-asyncio - allow 0.23.x for bug fixes, prevent breaking changes
    "pytest-asyncio>=0.23.0,<0.24.0",

    # ruff - allow 0.7.x for bug fixes, prevent breaking changes
    "ruff>=0.7.0,<0.8.0",

    # ty - type checker, allow 0.x for bug fixes
    "ty>=0.0.14,<1.0.0",
]

[project.scripts]
cc-bridge = "cc_bridge.cli:app"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["cc_bridge"]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
addopts = [
    "--strict-markers",
    "--strict-config",
    "--cov=cc_bridge",
    "--cov-report=term-missing",
    "--cov-report=html",
]
asyncio_mode = "auto"
markers = [
    "asyncio: mark test as async",
    "integration: mark test as integration test",
    "unit: mark test as unit test",
]

[tool.coverage.run]
source = ["cc_bridge"]
omit = [
    "tests/*",
    "**/__init__.py",
]

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "def __repr__",
    "raise AssertionError",
    "raise NotImplementedError",
    "if __name__ == .__main__.:",
    "if TYPE_CHECKING:",
    "@abstractmethod",
]
